# pico-mct

./: .gitattributes  .gitignore  Cargo.toml  index.html
dependencies/openmct/: espressoTheme.css  espressoTheme.css.map  espressoTheme.js  espressoTheme.js.map  maelstromTheme.js  openmct.js  snowTheme.css
openmct/: maelstromTheme.js.map
src/: ingest.rs  main.rs  routes.rs  serial.rs  telemetry.rs
src/routes/: config.rs  devices.rs  events.rs  history.rs  measurements.rs
web/: index.html  jsconfig.json
web/openmct/: espressoTheme.css  espressoTheme.css.map  index.html  maelstromTheme.css  maelstromTheme.css.map  openmct.js  snowTheme.css.map  snowTheme.js  snowTheme.js.map
web/src/: app.js  backend.d.ts  constants.js  historical-telemetry-plugin.js  openmct.d.ts  pico-pilot-plugin.js
web/src/ingest/: connect.js
web/src/openmct/: run.js
web/src/openmct/plugin/: historical-telemetry.js  pico-pilot.js  realtime-telemetry.js
web/src/plugins/: historical-telemetry.js  pico-pilot.js  realtime-telemetry.js  running-us-time-system.js
web/styles/: controls.css
web/types/: backend.d.ts  frontend.d.ts  openmct.d.ts
