[package]
name = "openmct-pico-pilot-ingest"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
color-eyre = "0.5"
simplelog = "0.10"
log = "0.4"
phf = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.0"
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
crossfire = "0.1"

[patch.crates-io]
async-attributes = { path = "../async-attributes" }
