[package]
name = "openmct-pico-pilot-ingest"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
color-eyre = "0.5"
crossfire = "0.1"
log = "0.4"
phf = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.0"
simplelog = "0.10"
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
ts-rs = "2.4"
crczoo = "0.1"
const_format = "0.2"
derive_builder = "0.10"
lazy_static = "1.4"
serde_cbor = "0.11"

[patch.crates-io]
# https://github.com/async-rs/async-attributes/pull/24
async-attributes = { git = "https://github.com/DusterTheFirst/async-attributes", branch = "less-annoying" }
# https://github.com/Aleph-Alpha/ts-rs/issues/5
ts-rs = { git = "https://github.com/Aleph-Alpha/ts-rs", branch = "support-declare" }